--- a/src/styles/TagBrowserPage.css
+++ b/src/styles/TagBrowserPage.css
@@ -28,8 +28,6 @@
     }
 
     &:hover {
-        /* background-color: var(--primary-purple-color);
-        color: var(--bg-white-color); */
         transform: scale(1.01);
         background-color: var(--bg-image-color);
         color: var(--primary-purple-color);
@@ -40,8 +38,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 12px;
-    padding: 12px 16px;
+    border-radius: 20px;
+    padding: 10px 16px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     cursor: pointer;
@@ -50,10 +48,8 @@
 }
 
 .add-tag-card {
-    background-color: var(--primary-purple-color);
-    color: var(--bg-white-color);
-
-    background-color: var(--mint-green-color);
+    background-color: rgb(249, 249, 249);
+    border: 1px solid #ccc;
     color: var(--primary-purple-color);
 }
 
@@ -108,16 +104,33 @@
     font-weight: 500;
     color: var(--primary-purple-color);
     transition: all 0.3s ease;
+
+    .tag-card-trash {
+        color: #858585;
+        cursor: pointer;
+        padding: .5rem;
+        border-radius: 10px;
+        transition: all 0.3s ease;
+        display: none;
+    }
+
+}
+
+.tag-card-trash:hover {
+    transform: scale(1.1);
+    color: var(--primary-purple-color);
+    background-color: var(--bg-image-color);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 .tag-card:hover {
     transform: scale(1.01);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     background-color: white;
-}
 
-.arrow {
-    font-size: 1.1rem;
+    .tag-card-trash {
+        display: flex;
+    }
 }
 
 .color-0 {
@@ -184,8 +197,8 @@
         margin-bottom: 3.5rem;
     }
 
-    .add-tag-button {
-        width: 60%;
+    .add-tag-button, .add-tag-card {
+        width: 40%;
     }
 
     .tag-list {
