--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,9 +1,9 @@
 .create-personal-word-btn {
-    background-color: #f9f9f9;
+    background-color: var(--bg-image-color);
     color: var(--primary-purple-color);
-    border-radius: 20px;
+    border-radius: 15px;
     padding: 10px 20px;
-    border: 1px solid var(--primary-purple-color);
+    border: .5px solid #ccc;
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
     font-family: var(--font-main);
     font-size: 1rem;
@@ -11,8 +11,9 @@
     cursor: pointer;
     transition: all 0.3s ease;
 }
+
 .create-personal-word-btn:hover {
-    background-color: var(--mint-green-color);
+    background: linear-gradient(0deg,rgba(208, 239, 206, 1) 0%, rgba(250, 250, 250, 1) 100%);
     transform: scale(1.03);
 }
 
@@ -32,7 +33,8 @@
     width: 8.5rem;
     height: 9rem;
     margin-top: 3rem;
-    background-color: transparent;
+    /* background-color: transparent; */
+    background-color: var(--bg-image-color);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
