--- a/src/styles/WordResultCard.css
+++ b/src/styles/WordResultCard.css
@@ -14,6 +14,7 @@
     background-color: #ffffff;
     padding-bottom: 10px;
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+    border-radius: 15px 15px 0 0;
 
     display: flex;
     flex-direction: column;
