--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -22,8 +22,9 @@
     gap:1rem;
 
     .nav-links-icons {
-        display: none;
-        transition: all 0.3s ease;
+        visibility: hidden;
+        margin-right: 0.5rem;
+        transition: all 0.4s ease-in-out;
     }
 }
 
@@ -51,8 +52,7 @@
     border-bottom: 2px solid var(--primary-green-color);
 
     .nav-links-icons {
-        display: inline-block;
-        margin-right: 0.5rem;
+        visibility: visible;
     }
 }
 
