--- a/src/styles/UserExample.css
+++ b/src/styles/UserExample.css
@@ -355,7 +355,7 @@
     .example-item {
         flex-direction: row;
         align-items: center;
-        padding: 0.75rem 1rem;
+        padding: 0.1rem .8rem;
         gap: 1rem;
     }
 
