--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -76,7 +76,7 @@
 @media (min-width: 768px) {
     .welcome-page {
         padding: 3rem 4rem 0 4rem;
-        background-image: url('../../assets/bg_mini_welcome1.png');
+        background-image: linear-gradient(0deg,rgba(244, 254, 219, 0.33) 15%, rgba(213, 231, 241, 0.59) 100%), url('../../assets/bg_mini_welcome1.png');
         grid-template-rows: 40% 50% 10%;
         background-position: bottom;
         background-size: auto;
@@ -111,11 +111,10 @@
 @media (min-width: 1024px) {
     .welcome-page {
         padding: 4rem 6rem 0 6rem;
-        /* background-image: url('../../assets/bg_mini_welcome1.png'), linear-gradient(0deg,rgba(255, 254, 209, 1) 0%, rgba(227, 255, 222, 1) 100%); */
-        background-image: linear-gradient(0deg,rgba(249, 254, 214, 0.3) 20%, rgba(202, 255, 231, 0.93) 100%),
+        grid-template-rows: 30% 60% 10%;
+        background-image: linear-gradient(0deg,rgba(244, 254, 219, 0.33) 15%, rgba(213, 231, 241, 0.728) 100%),
             url('../../assets/bg_mini_welcome1.png'),
             linear-gradient(0deg,rgba(249, 254, 214, 1) 30%, rgba(202, 255, 231, 0.93) 100%);
-        grid-template-rows: 30% 60% 10%;
     }
 
 
