--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poetsen+One&display=swap');
 
-/*
-  Josh's Custom CSS Reset
-  https://www.joshwcomeau.com/css/custom-css-reset/
-*/
-
 *,
 *::before,
 *::after {
@@ -145,34 +140,34 @@ audio {
 }
 
 .navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    background-color: var(--primary-purple-color);
-    border-bottom: 1px solid #ccc;
-    z-index: 1000;
-    height: 8vh;
-    position: fixed;
-    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: var(--primary-purple-color);
+  border-bottom: 1px solid #ccc;
+  z-index: 1000;
+  height: 8vh;
+  position: fixed;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
 .back-button {
-    background: none;
-    border: none;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    font-family: var(--font-main);
-    margin-top: 1rem;
+  background: none;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-family: var(--font-main);
+  margin-top: 1rem;
 }
 
 .back-button:hover {
-    transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 .protected-main {
-  background: linear-gradient(0deg,rgba(254, 255, 252, 0.033) 0%, rgba(244, 254, 219, 0.208) 15%, rgba(213, 231, 241, 1) 100%), url('../assets/bg_protected_main.png');
+  background: linear-gradient(0deg, rgba(254, 255, 252, 0.033) 0%, rgba(244, 254, 219, 0.208) 15%, rgba(213, 231, 241, 1) 100%), url('../assets/bg_protected_main.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -228,17 +223,18 @@ audio {
 }
 
 @media (min-width: 768px) {
-    .navbar {
-        height: 9vh;
-    }
+  .navbar {
+    height: 9vh;
+  }
 
-    .protected-main {
-        padding: 9vh 3rem 2rem 3rem; /* Adjust for larger Navbar */
-    }
-}   
+  .protected-main {
+    padding: 9vh 3rem 2rem 3rem;
+    /* Adjust for larger Navbar */
+  }
+}
 
 @media (min-width: 1024px) {
-    .navbar {
-        padding: 1.5rem 3rem;
-    }
+  .navbar {
+    padding: 1.5rem 3rem;
+  }
 }
