--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap:1rem;
+    gap: 1rem;
 
     .nav-links-icons {
         visibility: hidden;
@@ -28,12 +28,13 @@
     }
 }
 
-
-.nav-links-words, .nav-links-tags {
+.nav-links-words,
+.nav-links-tags {
     display: none;
 }
 
-.nav-links a, .nav-links button {
+.nav-links a,
+.nav-links button {
     margin-left: .5rem;
     text-decoration: none;
     color: var(--primary-green-color);
@@ -47,7 +48,8 @@
     transition: all 0.4s ease;
 }
 
-.nav-links a:hover, .nav-links button:hover {
+.nav-links a:hover,
+.nav-links button:hover {
     padding-bottom: 3px;
     border-bottom: 2px solid var(--primary-green-color);
 
@@ -64,13 +66,18 @@
     .nav-links {
         gap: 2rem;
     }
-    .nav-links a, .nav-links button {
+
+    .nav-links a,
+    .nav-links button {
         font-size: 1.1rem;
     }
+
     .main-title {
         font-size: 1.5rem;
     }
-    .nav-links-words, .nav-links-tags {
+
+    .nav-links-words,
+    .nav-links-tags {
         display: block;
     }
 }
